--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,60 +1,82 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 98vh
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 98vh;
 }
-.container{
-    display: flex;
-    background-color: white;
-    width: fit-content;
-    border-radius: 30px;
-    padding: 25px;
-    gap: 6px;
+.container {
+  display: flex;
+  background-color: white;
+  width: fit-content;
+  border-radius: 30px;
+  padding: 25px;
+  gap: 6px;
+}
+@media (max-width:450px) {
+    .container {
+        flex-direction: column-reverse;
+        position: relative;
+        padding: 0;
+        width: 100vw;   
+    }
+    img{
+       
+      
+      transform: scaleX(1.6);
+      height: 23.6rem;
+        
+    }
+    .kidtainer{
+        position: relative;
+        bottom: 4rem;
+        transform: scale(1.1);
+        gap: 0.2rem;
+    }
+   
+        
     
+}
 
+.kidtainer {
+  width: 25rem;
+  height: 37.06rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.kidtainer{
-    width: 400px;
-    height: 593px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.kidtainer h1 {
+  font-size: 3.3rem;
+  color: hsl(234, 29%, 20%);
 }
-.kidtainer h1{
-    font-size: 3.3rem;
-    color:  hsl(234, 29%, 20%);
+ul {
+  list-style-type: none;
+  font-size: 1.1rem;
+  position: relative;
+  right: 11px;
 }
-ul{
-    list-style-type: none;
-    font-size: 1.1rem;
-    position: relative;
-    right: 11px;
+svg {
+  margin-right: 10px;
 }
-svg{
-    margin-right: 10px;
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-form{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+input {
+  width: 19rem;
+  height: 2rem;
+  border: solid grey 1px;
+  border-radius: 8px;
+  padding: 8px;
 }
-input{
-    width: 19rem;
-    height: 2rem;
-    border: solid grey 1px;
-    border-radius:8px ;
-    padding: 8px;
-    
+button {
+  padding: 15px;
+  border-radius: 7px;
+  background-color: hsl(234, 29%, 20%);
+  color: white;
+  border: none;
 }
-button{
-    padding: 15px;
-    border-radius: 7px;
-    background-color: hsl(234, 29%, 20%);
-    color: white;
-    border: none;
-}
-button:hover{
-    background-color: hsl(4, 100%, 67%);
+button:hover {
+  background-color: hsl(4, 100%, 67%);
 }
