--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -78,5 +78,5 @@ button {
   border: none;
 }
 button:hover {
-  background-color: hsl(4, 100%, 67%);
+  background-image: linear-gradient(to right, #ff527a, #ff6257);;
 }
